@@ -1,0 +1,38 @@
+# Copyright 2011 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+set testfile wchar
+set srcfile ${testfile}.c
+if { [prepare_for_testing ${testfile}.exp ${testfile} ${srcfile}] } {
+    return -1
+}
+
+set bp_location [gdb_get_line_number "START"]
+if ![runto "wchar.c:$bp_location" ] then {
+  return -1
+}
+
+gdb_test "print narrow" "= 97 L'a'"
+
+gdb_test "print single" "= 48879 L'\\\\xbeef'"
+
+gdb_test "print simple" "= L\"facile\""
+
+gdb_test "print difficile" "= L\"\\\\xdead\\\\xbeef\\\\xfeed\\\\xface\""
+
+gdb_test "print simple\[2\]" "= 99 L'c'"
+
+gdb_test "print difficile\[2\]" "= 65261 L'\\\\xfeed'"
+
